# Highlight

./: .dockerignore  .gitignore  Dockerfile  Highlight.example.toml  README.md  docker-compose.yml
.github/workflows/: build.yml  docker.yml  publish.yml
crates/highlight/: Cargo.toml  schema.psql
crates/highlight/src/: config.rs  events.rs  main.rs
crates/highlight/src/commands/: help.rs  info.rs  mod.rs  play.rs  stats.rs
crates/highlight/src/commands/highlight/: add.rs  block.rs  clear.rs  mod.rs  remove.rs  unblock.rs  view.rs
crates/highlight/src/commands/moderation/: ban.rs  mod.rs  purge.rs  timeout.rs
crates/highlight/src/commands/starboard/: channel.rs  limit.rs  mod.rs
crates/highlight/src/utils/: checks.rs  config.rs  database.rs  duration.rs  error.rs  help.rs  message.rs  mod.rs  models.rs  regex.rs  state.rs
crates/revolt/: Cargo.toml
crates/revolt-macros/: Cargo.toml
crates/revolt-macros/src/: lib.rs
crates/revolt/src/: cache.rs  client.rs  context.rs  error.rs  events.rs  http.rs  lib.rs  notifiers.rs  permissions.rs  state.rs  waiters.rs  websocket.rs
crates/revolt/src/builders/: fetch_messages.rs  mod.rs  send_message.rs
crates/revolt/src/commands/: checks.rs  command.rs  context.rs  converter.rs  events.rs  handler.rs  mod.rs  words.rs
crates/stoat/: Cargo.toml  README.md
crates/stoat/examples/: README.md  commands.rs  simple.rs
crates/stoat/examples/groups/: main.rs
crates/stoat/examples/groups/commands/: ban.rs  mod.rs
crates/stoat/src/: cache.rs  client.rs  context.rs  error.rs  events.rs  ext.rs  file.rs  http.rs  lib.rs  notifiers.rs  permissions.rs  types.rs  ulid.rs  utils.rs  websocket.rs
crates/stoat/src/builders/: create_channel.rs  edit_channel.rs  edit_member.rs  edit_message.rs  edit_role.rs  edit_server.rs  edit_user.rs  edit_webhook.rs  execute_webhook.rs  fetch_messages.rs  mod.rs  send_message.rs
crates/stoat/src/commands/: checks.rs  command.rs  context.rs  converter.rs  events.rs  handler.rs  help.rs  mod.rs  utils.rs  words.rs
crates/stoat/src/ext/: channel.rs  embed.rs  file.rs  identifiable.rs  interactions.rs  member.rs  message.rs  mod.rs  role.rs  server.rs  stoat.rs  user.rs  webhook.rs
crates/stoat/src/voice/: connection.rs  events.rs  mod.rs  sink.rs  source.rs  sources.rs  utils.rs
crates/stoat/src/voice/audio/: mod.rs  sink.rs  source.rs
crates/stoat/src/voice/video/: source.rs
crates/stoat/tests/: mod.rs  types.rs
