[package]
name = "highlight"
version = "0.1.0"
edition = "2024"

[dependencies]
stoat-rs = { path = "../stoat" }
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
lru = "0.16.0"
regex = "1.11"
ulid = "1.2.1"
log = "0.4"
pretty_env_logger = "0.5.0"