[package]
name = "revolt"
version = "0.1.0"
edition = "2024"

[dependencies]
revolt-macros = { path = "../revolt-macros" }
revolt-models = { git = "https://github.com/revoltchat/backend", default-features = false, features = ["partials"] }
revolt-database = { git = "https://github.com/revoltchat/backend", default-features = false, features = ["async-std-runtime"]}
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
tungstenite = { version = "0.27", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
futures = "0.3"
serde_json = "1.0"
ulid = "1.1"
tokio = { version = "1.47", features = ["rt"] }
async-trait = "0.1"
async-recursion = "1.1.1"
regex = "1.11"
rand = "*"