[package]
name = "stoat"
version = "0.1.0"
edition = "2024"

[features]
voice = ["livekit", "livekit-api", "livekit-protocol", "livekit-runtime", "hound"]
default = ["voice"]

[dependencies]
# Stoat
stoat-models = { package = "revolt-models", git = "https://github.com/stoatchat/stoatchat", default-features = false, features = ["partials"] }
stoat-database = { package = "revolt-database", git = "https://github.com/stoatchat/stoatchat", default-features = false, features = ["async-std-runtime"] }
stoat-permissions = { package = "revolt-permissions", git = "https://github.com/stoatchat/stoatchat" }
stoat-result = { package = "revolt-result", git = "https://github.com/stoatchat/stoatchat" }

# HTTP
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
tungstenite = { version = "0.27", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"

# Async
futures = "0.3"
tokio = { version = "1.48.0", features = ["rt"] }
async-trait = "0.1"
async-recursion = "1.1.1"
async_fn_traits = "*"

# Utils
ulid = "1.1"
regex = "1.11"
rand = "0.8"
state = "0.6.0"
log = "0.4"
dashmap = "6.1.0"
bytes = "1.11.0"
paste = "1.0.15"
indexmap = "1.9.3"
either = { version = "*", optional = true }

# Voice
livekit = { version = "0.7.25", features = ["native-tls"], optional = true }
livekit-api = { version = "0.4.10", optional = true }
livekit-protocol = { version = "0.5.2", optional = true }
livekit-runtime = { version = "0.4.0", features = ["tokio"], optional = true }
hound = { version = "3.5.1", optional = true }